--- a/klimaindex.html
+++ b/klimaindex.html
@@ -42,10 +42,15 @@
   </div>
 
   
-      <footer>
-      <p>Klima nettside. Copyright © 2019</p>
-      
-	  
-    </footer>
+      <footer class="hovedfooter">
+        <section class="lenker_footer">
+        <a href="">Om oss</a>
+        <a href="">Sidekart</a>
+        <a href="">Kariarre</a>
+        <a href="">Støtt oss</a>
+        <a href="">In English</a>
+        </section>
+        <section class="copyright">Gruppe 30 | copyright 2019</section>
+      </footer>
   </body>
 </html>
