--- a/Backend.html
+++ b/Backend.html
@@ -4,24 +4,34 @@
     <title>Test Backend</title>
 </head>
 <body>
-    <header class="hovedheader">
-        <a href="/" class="logoen">LOGO</a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
-        <ul class="menu">
-            <li><a href="#Login">User</a></li>
-            <li><a href="#Registrer">Registrer</a></li>
-            <li><a href="#Bakgrunn">Bakgrunn</a></li>
-        </ul>   
-    </header>
-    <div class="textbox">
-        <h2>Legg in tekst</h2>
-        <form>
-            <div>
-                <textarea name="textbox" cols="30" rows="10"></textarea>
-                <label for="textbox">Skriv inn</label>
-            </div>
-        </form>
-    </div>
+    <main>
+        <header class="hovedheader">
+            <a href="/" class="logoen">LOGO</a>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
+            <ul class="menu">
+                <li><a href="#Login">User</a></li>
+                <li><a href="#Registrer">Registrer</a></li>
+                <li><a href="#Bakgrunn">Bakgrunn</a></li>
+            </ul>   
+        </header>
+        <div class="textbox">
+            <form>
+                <div class="textbox1">
+                    <textarea name="textbox" cols="100" rows="30">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, beatae! Eaque, aut quia. Iure voluptatum nisi recusandae, corporis velit molestiae iusto provident aspernatur! Nam iste delectus est maiores, dignissimos obcaecati.</textarea>
+                </div>
+            </form>
+        </div>
+    </main>
+        <footer class="hovedfooter">
+                <section class="lenker_footer">
+                <a href="">Om oss</a>
+                <a href="">Sidekart</a>
+                <a href="">Kariarre</a>
+                <a href="">Støtt oss</a>
+                <a href="">In English</a>
+                </section>
+                <section class="copyright">Gruppe 30 | copyright 2019</section>
+        </footer>
 </body>
 </html>
