--- a/Backend.html
+++ b/Backend.html
@@ -16,7 +16,7 @@
                 <li><a href="#Bakgrunn">Bakgrunn</a></li>
             </ul>   
         </header>
-        <div class="textbox">
+        <div class="textbox1">
                 
               <!--   <textarea name="textbox" cols="100" rows="30">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, beatae! Eaque, aut quia. Iure voluptatum nisi recusandae, corporis velit molestiae iusto provident aspernatur! Nam iste delectus est maiores, dignissimos obcaecati.</textarea> -->
           <!-- Lag id eller class for textarea--> <textarea id="subject" name="subject" placeholder="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum, beatae! Eaque, aut quia. Iure voluptatum nisi recusandae, corporis velit molestiae iusto provident aspernatur! Nam iste delectus est maiores, dignissimos obcaecati." style="height:200px; width:55%; margin-top:2em;"></textarea> 
